--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/eslint-config-prettier": "3.0.0-rc.2",
     "@vue/test-utils": "1.0.0-beta.19",
     "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.0.1",
     "lint-staged": "7.2.0",
     "pickr-widget": "https://github.com/Simonwep/pickr.git#master",
     "postcss-import": "11.1.0",
@@ -41,6 +42,12 @@
     }
   },
   "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.vue",
+      "!**/node_modules/**"
+    ],
+    "coverageDirectory": "<rootDir>/coverage",
     "moduleFileExtensions": [
       "js",
       "jsx",
@@ -49,6 +56,7 @@
     ],
     "transform": {
       ".+\\.vue$": "vue-jest",
+      "^.+\\.js$": "babel-jest",
       ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub"
     },
     "moduleNameMapper": {
