--- a/package.json
+++ b/package.json
@@ -2,36 +2,43 @@
   "name": "vue-pickr",
   "version": "0.1.0",
   "license": "MIT",
+  "main": "./dist/VuePickr.umd.js",
+  "module": "./dist/VuePickr.esm.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --name VuePickr src/vue-pickr.vue",
+    "prebuild": "rimraf ./dist",
+    "build": "rollup --config rollup.config.js",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "storybook": "start-storybook -p 9001 --config-dir .storybook --static-dir ./public"
-  },
-  "dependencies": {
-    "vue": "2.5.16",
-    "vue-class-component": "6.2.0",
-    "vue-property-decorator": "6.1.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "4.0.0-alpha.9",
     "@storybook/addons": "4.0.0-alpha.9",
     "@storybook/vue": "4.0.0-alpha.9",
-    "@vue/cli": "3.0.0-rc.2",
-    "@vue/cli-plugin-babel": "3.0.0-rc.2",
-    "@vue/cli-plugin-eslint": "3.0.0-rc.2",
-    "@vue/cli-plugin-unit-jest": "3.0.0-rc.2",
-    "@vue/cli-service": "3.0.0-rc.2",
-    "@vue/eslint-config-prettier": "3.0.0-rc.2",
+    "@vue/cli": "3.0.0-rc.3",
+    "@vue/cli-plugin-babel": "3.0.0-rc.3",
+    "@vue/cli-plugin-eslint": "3.0.0-rc.3",
+    "@vue/cli-plugin-unit-jest": "3.0.0-rc.3",
+    "@vue/cli-service": "3.0.0-rc.3",
+    "@vue/eslint-config-prettier": "3.0.0-rc.3",
     "@vue/test-utils": "1.0.0-beta.19",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.0.1",
+    "babel-jest": "23.0.1",
     "lint-staged": "7.2.0",
-    "pickr-widget": "https://github.com/Simonwep/pickr.git#master",
+    "pickr-widget": "0.1.2",
     "postcss-import": "11.1.0",
     "prettier": "1.13.5",
+    "rimraf": "2.6.2",
+    "rollup": "0.60.7",
+    "rollup-plugin-eslint": "4.0.0",
+    "rollup-plugin-filesize": "2.0.0",
+    "rollup-plugin-vue": "4.2.0",
+    "vue": "2.5.16",
     "vue-template-compiler": "2.5.16"
+  },
+  "peerDependencies": {
+    "pickr-widget": ">=0.1.2",
+    "vue": ">=2.5.16"
   },
   "browserslist": [
     "> 10%"
@@ -56,7 +63,7 @@
     ],
     "transform": {
       ".+\\.vue$": "vue-jest",
-      "^.+\\.js$": "babel-jest",
+      ".+\\.js$": "babel-jest",
       ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub"
     },
     "moduleNameMapper": {
@@ -69,12 +76,7 @@
       "<rootDir>/(tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx))"
     ]
   },
-  "main": "./dist/VuePickr.umd.js",
   "lint-staged": {
-    "*.ts": [
-      "vue-cli-service lint",
-      "git add"
-    ],
     "*.vue": [
       "vue-cli-service lint",
       "git add",
@@ -88,8 +90,5 @@
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
-  },
-  "peerDependencies": {
-    "pickr-widget": ">=0.1.1"
   }
 }
