docs(README): add basic docs
Signed-off-by: Will Soto <will.soto9@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-pickr",
+  "name": "@willsoto/vue-pickr",
   "version": "0.1.0",
   "license": "MIT",
   "main": "./dist/VuePickr.umd.js",
