chore(ci): add coverage
Signed-off-by: Will Soto <will.soto9@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,8 @@ before_script:
 
 test:
   script:
-    - yarn test:unit
+    - yarn test:unit --coverage --no-color
+  coverage: '/All files\s*\|\s*([\d\.]+)/'
 
 build:
   script:
