--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ before_script:
 test:
   script:
     - yarn test:unit --coverage --no-color
-  coverage: '/All files\s*\|\s*([\d\.]+)/'
+  coverage: '/All files[^|]*\|[^|]*\s+([\d\.]+)/'
 
 build:
   script:
