--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "rollup --config rollup.config.js",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "storybook": "start-storybook -p 9001 --config-dir .storybook --static-dir ./public"
+    "storybook": "start-storybook -p 9001 --config-dir .storybook --static-dir ./public",
+    "release": "standard-version --sign --message 'chore(release): %s [skip ci]'",
+    "postrelease": "git push --follow-tags origin master && npm publish"
   },
   "devDependencies": {
     "@storybook/addon-actions": "4.0.0-alpha.9",
@@ -33,6 +35,7 @@
     "rollup-plugin-eslint": "4.0.0",
     "rollup-plugin-filesize": "2.0.0",
     "rollup-plugin-vue": "4.2.0",
+    "standard-version": "4.4.0",
     "vue": "2.5.16",
     "vue-template-compiler": "2.5.16"
   },
