chore(package): add files key
Signed-off-by: Will Soto <will.soto9@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "license": "MIT",
   "main": "./dist/VuePickr.umd.js",
   "module": "./dist/VuePickr.esm.js",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "rollup --config rollup.config.js",
